[package]
name = "wavemaker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wavemaker"

[[bin]]
path = "src/cli.rs"
name = "wave-cli"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
four-cc = "0.2.0"
mp4 = "0.11.0"
clap = { version = "4.0.4", features = ["derive"] }
